home: add more partners' logos

--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -571,6 +571,30 @@
           <div class="partner-logo">
             <img src="homePages/images/binhan-logo.png" alt="Bình An" />
           </div>
+          <div class="partner-logo">
+            <img src="homePages/images/tetrapak-logo.png" alt="Tetra Pak" />
+          </div>
+          <div class="partner-logo">
+            <img
+              src="homePages/images/petrovietnam-logo.png"
+              alt="Petro Vietnam"
+            />
+          </div>
+          <div class="partner-logo">
+            <img
+              src="homePages/images/thepnguyenminh-logo.png"
+              alt="Thép Nguyễn Minh"
+            />
+          </div>
+          <div class="partner-logo">
+            <img src="homePages/images/gassouth-logo.png" alt="Gas South" />
+          </div>
+          <div class="partner-logo">
+            <img src="homePages/images/hongan-logo.png" alt="Hồng An" />
+          </div>
+          <div class="partner-logo">
+            <img src="homePages/images/ciec-logo.png" alt="CIEC" />
+          </div>
         </div>
       </div>
     </section>
