home: remove background of partners' logos

--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -557,22 +557,28 @@
 
         <div class="partners-logo-container">
           <div class="partner-logo">
-            <img src="homePages/images/tranquang-logo.png" alt="Trần Quang" />
+            <img
+              src="homePages/images/tranquang-logo.png?v=1.0"
+              alt="Trần Quang"
+            />
           </div>
           <div class="partner-logo">
-            <img src="homePages/images/dongtam-logo.png" alt="Đồng Tâm" />
+            <img src="homePages/images/dongtam-logo.png?v=1.0" alt="Đồng Tâm" />
           </div>
           <div class="partner-logo">
-            <img src="homePages/images/richs-logo.png" alt="Rich's" />
+            <img src="homePages/images/richs-logo.png?v=1.0" alt="Rich's" />
           </div>
           <div class="partner-logo">
-            <img src="homePages/images/samsung-logo.png" alt="Samsung" />
+            <img src="homePages/images/samsung-logo.png?v=1.0" alt="Samsung" />
           </div>
           <div class="partner-logo">
-            <img src="homePages/images/binhan-logo.png" alt="Bình An" />
+            <img src="homePages/images/binhan-logo.png?v=1.0" alt="Bình An" />
           </div>
           <div class="partner-logo">
-            <img src="homePages/images/tetrapak-logo.png" alt="Tetra Pak" />
+            <img
+              src="homePages/images/tetrapak-logo.png?v=1.0"
+              alt="Tetra Pak"
+            />
           </div>
           <div class="partner-logo">
             <img
@@ -587,13 +593,16 @@
             />
           </div>
           <div class="partner-logo">
-            <img src="homePages/images/gassouth-logo.png" alt="Gas South" />
+            <img
+              src="homePages/images/gassouth-logo.png?v=1.0"
+              alt="Gas South"
+            />
           </div>
           <div class="partner-logo">
             <img src="homePages/images/hongan-logo.png" alt="Hồng An" />
           </div>
           <div class="partner-logo">
-            <img src="homePages/images/ciec-logo.png" alt="CIEC" />
+            <img src="homePages/images/ciec-logo.png?v=1.0" alt="CIEC" />
           </div>
         </div>
       </div>
